# cam-shift-detector

./: .coverage  .gitignore  =10.0.0  CHANGELOG.md  CLAUDE.md  INSTALLATION_VERIFICATION_REPORT.md  LICENSE  MANIFEST.in  README.md  comparison_config.json  config.json  config_session_001.json  config_session_slow_001.json  main.py  pyproject.toml  requirements.txt  run_online_comparison.sh  tech-spec.md
.claude/: settings.local.json
demo/: README.md  csd_test_modes.html  demo1_basic_detection.py  demo2_history_buffer.py  demo3_recalibration.py  demo4_multi_frame_sequence.py
docs/: Implementation_Audit_Report.md  MVP_Camera_Movement_Detection_SIMPLIFIED.md  MVP_Camera_Movement_Detection_v1.1.md  PRD_Evolution_Analysis.md  Stage_4_prompt.md  Stakeholder_Presentation.md  bmm-workflow-status.md  brainstorming-session-results-2025-10-17.md  epic-stage4-debug-tools.md  epics.md  product-brief-cam-shift-detector-2025-10-25.md  product-brief-executive-cam-shift-detector-2025-10-25.md  story-2025-10-21.md  tech-spec-epic-MVP-001.md  tech-spec.md
documentation/: backlog.md  ground-truth-annotation-results.md  installation.md  integration-cheat-sheet.md  integration-guide.md
src/: __init__.py  camera_movement_detector.py  camera_movement_detector_stub.py  feature_extractor.py  movement_detector.py  result_manager.py  static_region_manager.py
tests/: test_camera_movement_detector.py  test_charuco_calibration.py  test_e2e.py  test_feature_extractor.py  test_integration.py  test_movement_detector.py  test_performance.py  test_recalibrate.py  test_result_manager.py  (+3 more)
(+170 files in other folders)
