[project]
name = "cam-shift-detector"
version = "0.1.0"
description = "Computer vision system for detecting camera movement in time-series imagery using feature matching and transformation analysis"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Tomer Halevy", email = "tomer@example.com"}
]
keywords = ["computer-vision", "camera-detection", "feature-matching", "opencv", "image-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.11"
dependencies = [
    "opencv-contrib-python>=4.12.0.88",
    "opencv-python>=4.12.0.88",
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/thamam/cam-shift-detector"
Repository = "https://github.com/thamam/cam-shift-detector"
Issues = "https://github.com/thamam/cam-shift-detector/issues"
Documentation = "https://github.com/thamam/cam-shift-detector/blob/main/README.md"
